# file-router

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  main.c
src/: app.rs  config.rs  error.rs  lib.rs  main.rs
src/domain/: mod.rs  path.rs
src/http/: routes.rs
src/infrastructure/: cdn.rs  mod.rs
src/services/: mod.rs  proxy.rs
