[package]
name = "file-router"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Fast CDN image proxy."
license = "MIT"

[dependencies]
axum = "0.8"
bytes = "1"
dotenvy = "0.15"
futures-util = "0.3"
http = "1"
reqwest = { version = "0.12", default-features = false, features = ["http2", "rustls-tls", "stream"] }
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "time"] }
tokio-util = "0.7"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
